--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      <script async custom-element="amp-fit-text" src="https://cdn.ampproject.org/v0/amp-fit-text-0.1.js"></script>
      <meta name="amp-cta-type" content="INSTALL APLIKASI">
   <!-- amp-cta-url specifies where the user is directed once clicking upon the call to action button. -->
-  <meta name="amp-cta-url" content="https://play.google.com/store/apps/dev?id=4649381816089573063">
+  <meta name="amp-cta-url" content="https://propanaofficial.co.id/aplikasi/propana.apk">
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400" rel="stylesheet">
     <style amp-custom>
       amp-story {
