--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@ Saatnya memulai bisnis pulsa Anda dengan mudah, cepat, dan modal terjangkau. Cuk
         src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
     <script async custom-element="amp-story"
         src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
-     <script async src="https://cdn.ampproject.org/amp4ads-v0.js"></script>
      <script async custom-element="amp-fit-text" src="https://cdn.ampproject.org/v0/amp-fit-text-0.1.js"></script>
-     <meta name="amp-cta-type" content="INSTALL APLIKASI">
-  <!-- amp-cta-url specifies where the user is directed once clicking upon the call to action button. -->
-  <meta name="amp-cta-url" content="https://propanaofficial.co.id/aplikasi/propana.apk">
+
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400" rel="stylesheet">
     <style amp-custom>
       amp-story {
@@ -90,6 +87,9 @@ Saatnya memulai bisnis pulsa Anda dengan mudah, cepat, dan modal terjangkau. Cuk
               layout="responsive">
           </amp-img>
         </amp-story-grid-layer>
+        <amp-story-page-outlink layout="nodisplay">
+        <a href="https://propanaofficial.co.id/aplikasi/propana.apk" title="Link Description">Registrasi</a>
+          </amp-story-page-outlink>
         <amp-story-grid-layer template="vertical">
           <h1></h1>
           <p></p>
@@ -103,6 +103,9 @@ Saatnya memulai bisnis pulsa Anda dengan mudah, cepat, dan modal terjangkau. Cuk
               layout="responsive">
           </amp-img>
         </amp-story-grid-layer>
+        <amp-story-page-outlink layout="nodisplay">
+        <a href="https://propanaofficial.co.id/aplikasi/propana.apk" title="Link Description">Swipe Up Install</a>
+          </amp-story-page-outlink>
           <amp-story-grid-layer template="thirds">
             <h1 grid-area="upper-third"></h1>
             <p grid-area="lower-third"></p>
@@ -117,6 +120,9 @@ Saatnya memulai bisnis pulsa Anda dengan mudah, cepat, dan modal terjangkau. Cuk
               layout="responsive">
           </amp-img>
         </amp-story-grid-layer>
+        <amp-story-page-outlink layout="nodisplay">
+        <a href="https://propanaofficial.co.id/aplikasi/propana.apk" title="Link Description">Install Aplikasi</a>
+          </amp-story-page-outlink>
         <amp-story-grid-layer template="vertical">
           <h1></h1>
         </amp-story-grid-layer>
@@ -148,6 +154,9 @@ Saatnya memulai bisnis pulsa Anda dengan mudah, cepat, dan modal terjangkau. Cuk
               layout="responsive">
           </amp-img>
         </amp-story-grid-layer>
+        <amp-story-page-outlink layout="nodisplay">
+        <a href="https://propanaofficial.co.id/aplikasi/propana.apk" title="Link Description">Install Aplikasi</a>
+          </amp-story-page-outlink>
       </amp-story-page>
       <!-- Bookend -->
       
