--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgRp2HZEMUDxXVxXgco_t7B-ZXTjfth3pvfebyDYvKCFEHL9_r6zK_LNHz3Z1VSppPPJms2Bt1TllW37gRwfhCdesFUnibhjp3e1UG705mMYlu0bwKruQE95GHvuMGGBZJDFkWBa50G3f8jBLhH4hp3ZBT4ZQgBPcBVkAI14saOXQboGaJt8qeG58H4Mw/s1200/Gambar40.png" />
     <meta property="og:type" content="artikel" />
     <meta property="og:description" content="Bisnis Pulsa Masa Kini
-
+    <link rel="manifest" href="/manifest.json"/>
 Saatnya memulai bisnis pulsa Anda dengan mudah, cepat, dan modal terjangkau. Cukup dengan modal Rp. 100rb-an, sudah bisa memulai bisnis dengan produk yang lengkap dan up-to-date." />
     <style amp-boilerplate>
       body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
